# nm_ai-Tripletex

./: .gitignore  CLAUDE.md  README.md  main.py  requirements.txt
Tripletex/: .dockerignore  .env.example  Dockerfile  README.md  prompt_inventory.md  pyproject.toml  requirements.txt  setup.py  temp_customer.json  temp_department.json  temp_order.json  test.py  vercel.json
Tripletex/app/: __init__.py  attachment_parser.py  config.py  error_handling.py  errors.py  executor.py  llm_parser.py  logging_utils.py  main.py  parser.py  planner.py  preflight.py  prompt_lab.py  schemas.py  task_contracts.py  validator.py  workflow.py
Tripletex/debug_logs/: 2026-03-20_submission_log_excerpt.txt  2026-03-20_submission_summary.md
Tripletex/fixtures/: sample_invoice_request.json  sample_order_request.json  sample_request.json
Tripletex/scripts/: build_rag_index.py  inspect_prompt.py  local_test_station.ps1  smoke_test.py  test_solve.py
Tripletex/tests/: __init__.py  test_advanced_tier2_parser.py  test_advanced_tier2_workflows.py  test_adversarial_language_variants.py  test_adversarial_prompts.py  test_agent.py  test_app.py  test_attachment_driven_routing.py  test_attachment_edge_cases.py  test_attachment_integration.py  test_attachments_service.py  test_client_behaviour.py  test_competition_prompt_robustness.py  test_competition_regressions.py  test_efficiency_workflows.py  test_employee_payload_regressions.py  test_endpoint_contracts.py  test_endpoint_method_audit.py  test_error_policy.py  test_failure_mode_guards.py  test_hidden_prompt_corpus.py  test_intent_classifier.py  (+25 more)
(+47 files in other folders)
