[project]
name = "tripletex-agent"
version = "0.1.0"
description = "Self-contained Tripletex competition agent."
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.115,<1.0",
    "httpx>=0.28,<0.29",
    "pydantic>=2.9,<3.0",
    "pydantic-settings>=2.6,<3.0",
    "uvicorn>=0.34,<0.35",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
